; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mptcp.c_mptcp_update_dss_rcv_state.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mptcp.c_mptcp_update_dss_rcv_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mptcp_dsn_opt = type { i32, i32, i32 }
%struct.tcpcb = type { i32 }
%struct.mptcb = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mptcp_update_dss_rcv_state(%struct.mptcp_dsn_opt* %0, %struct.tcpcb* %1, i32 %2) #0 {
  %4 = alloca %struct.mptcp_dsn_opt*, align 8
  %5 = alloca %struct.tcpcb*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.mptcb*, align 8
  %8 = alloca i32, align 4
  store %struct.mptcp_dsn_opt* %0, %struct.mptcp_dsn_opt** %4, align 8
  store %struct.tcpcb* %1, %struct.tcpcb** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.tcpcb*, %struct.tcpcb** %5, align 8
  %10 = call %struct.mptcb* @tptomptp(%struct.tcpcb* %9)
  store %struct.mptcb* %10, %struct.mptcb** %7, align 8
  store i32 0, i32* %8, align 4
  %11 = load %struct.mptcp_dsn_opt*, %struct.mptcp_dsn_opt** %4, align 8
  %12 = getelementptr inbounds %struct.mptcp_dsn_opt, %struct.mptcp_dsn_opt* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @NTOHL(i32 %13)
  %15 = load %struct.mptcp_dsn_opt*, %struct.mptcp_dsn_opt** %4, align 8
  %16 = getelementptr inbounds %struct.mptcp_dsn_opt, %struct.mptcp_dsn_opt* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @NTOHL(i32 %17)
  %19 = load %struct.mptcp_dsn_opt*, %struct.mptcp_dsn_opt** %4, align 8
  %20 = getelementptr inbounds %struct.mptcp_dsn_opt, %struct.mptcp_dsn_opt* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @NTOHS(i32 %21)
  %23 = load %struct.mptcb*, %struct.mptcb** %7, align 8
  %24 = getelementptr inbounds %struct.mptcb, %struct.mptcb* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.mptcp_dsn_opt*, %struct.mptcp_dsn_opt** %4, align 8
  %27 = getelementptr inbounds %struct.mptcp_dsn_opt, %struct.mptcp_dsn_opt* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @MPTCP_EXTEND_DSN(i32 %25, i32 %28, i32 %29)
  %31 = load %struct.mptcb*, %struct.mptcb** %7, align 8
  %32 = load %struct.tcpcb*, %struct.tcpcb** %5, align 8
  %33 = load i32, i32* %8, align 4
  %34 = load %struct.mptcp_dsn_opt*, %struct.mptcp_dsn_opt** %4, align 8
  %35 = getelementptr inbounds %struct.mptcp_dsn_opt, %struct.mptcp_dsn_opt* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.mptcp_dsn_opt*, %struct.mptcp_dsn_opt** %4, align 8
  %38 = getelementptr inbounds %struct.mptcp_dsn_opt, %struct.mptcp_dsn_opt* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i32, i32* %6, align 4
  %41 = call i32 @mptcp_update_rcv_state_meat(%struct.mptcb* %31, %struct.tcpcb* %32, i32 %33, i32 %36, i32 %39, i32 %40)
  ret void
}

declare dso_local %struct.mptcb* @tptomptp(%struct.tcpcb*) #1

declare dso_local i32 @NTOHL(i32) #1

declare dso_local i32 @NTOHS(i32) #1

declare dso_local i32 @MPTCP_EXTEND_DSN(i32, i32, i32) #1

declare dso_local i32 @mptcp_update_rcv_state_meat(%struct.mptcb*, %struct.tcpcb*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
